// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing GetAllExams() in tag.js correct tag creation when accessing invalid name parameter to match snapshot 1`] = `undefined`;

exports[`Testing GetConditionalExams() with all conditional comorbidities correct array of conditional exams for Anticoagulant to match snapshot 1`] = `
Array [
  "PTT/INR",
]
`;

exports[`Testing GetConditionalExams() with all conditional comorbidities correct array of conditional exams for Antiplatelet to match snapshot 1`] = `
Array [
  "PTT/INR",
]
`;

exports[`Testing GetConditionalExams() with all conditional comorbidities correct array of conditional exams for Malignanc to match snapshot 1`] = `
Array [
  "ECG",
  "Renal Panel (Creat + Lytes)",
  "PTT/INR",
]
`;

exports[`Testing GetExams() and GetConditionalExams() with invalid parameters correct array of examinations for invalid condition to match snapshot 1`] = `Array []`;

exports[`Testing GetExams() and GetConditionalExams() with invalid parameters correct array of examinations for invalid condition to match snapshot 2`] = `Array []`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for atrial fibrillation to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for coronary artery disease to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for difibrillator to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for history of cerebral disease to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for history of pulmonary vascular disease disease to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for peripheral vascular disease (PVD) to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for valvular heart disease / valve replacement to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for valvular heart failure to match snapshot 1`] = `
Array [
  "ECG",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of ACE-I to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of ARB to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of Anticoagulants to match snapshot 1`] = `
Array [
  "CBC",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of Antiplatelet (ASA excluded) to match snapshot 1`] = `
Array [
  "CBC",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of Digoxin to match snapshot 1`] = `
Array [
  "ECG",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of Diuretics to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of Lithium to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of NSAIDS to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of use of systemic steroid used within 6 months to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
  "Gluc",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for >= 2 risk factors to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for bleeding disorders (hemophiliac | DVT) to match snapshot 1`] = `
Array [
  "CBC",
  "PTT/INR",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for diabetes to match snapshot 1`] = `
Array [
  "ECG ",
  "Renal Panel (Creat + Lytes)",
  "Gluc",
  "HbA1C",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for hepatic disease to match snapshot 1`] = `
Array [
  "CBC",
  "Renal Panel (Creat + Lytes)",
  "PTT/INR",
  "LFT",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for history of active bleeding to match snapshot 1`] = `Array []`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for history of adrenal disease to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for history of anemia to match snapshot 1`] = `
Array [
  "CBC",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for history of major systemic endocrine disease to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for history of pituitary disease to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for kidney disease (on dialysis or at risk of Acute Kidney Injury [AKI]) to match snapshot 1`] = `
Array [
  "CBC",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for present malignancy to match snapshot 1`] = `
Array [
  "CBC",
  "CXR (for surgical / anesthetic planning / new or worsened symptoms)",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for thyroid disease or on thyroid supplementation to match snapshot 1`] = `
Array [
  "TSH",
]
`;

exports[`Testing GetExams() for all pulmonary diseases in tag.js correct array of examinations for severe COPD, home oxygen, pulmonary HTN to match snapshot 1`] = `
Array [
  "ECG",
  "CBC",
  "CXR (for surgical / anesthetic planning / new or worsened symptoms)",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Atrial fibrillation pre op exams to match snapshot 1`] = `
Array [
  "Group and Screen",
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Atrial fibrillation pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Coronary Artery Disease pre op exams to match snapshot 1`] = `
Array [
  "Group and Screen",
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Coronary Artery Disease pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Defibriallator pre op exams to match snapshot 1`] = `
Array [
  "Group and Screen",
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Defibriallator pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Heart failure pre op exams to match snapshot 1`] = `
Array [
  "Group and Screen",
  "ECG",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Heart failure pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js History of cerebral disease pre op exams to match snapshot 1`] = `
Array [
  "Group and Screen",
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js History of cerebral disease pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js History of pulmonary vascular disease pre op exams to match snapshot 1`] = `
Array [
  "Group and Screen",
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js History of pulmonary vascular disease pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Peripheral vasculara disease (PVD) pre op exams to match snapshot 1`] = `
Array [
  "Group and Screen",
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Peripheral vasculara disease (PVD) pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Valvular heart disease / valve replacement pre op exams to match snapshot 1`] = `
Array [
  "Group and Screen",
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of ACE-I to match snapshot 1`] = `
Array [
  "Group and Screen",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of ACE-I to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of ARB to match snapshot 1`] = `
Array [
  "Group and Screen",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of ARB to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Anticoagulant to match snapshot 1`] = `
Array [
  "Group and Screen",
  "CBC",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Anticoagulant to match snapshot 2`] = `
Array [
  "PTT/INR",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Antiplatelet (ASA excluded) to match snapshot 1`] = `
Array [
  "Group and Screen",
  "CBC",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Antiplatelet (ASA excluded) to match snapshot 2`] = `
Array [
  "PTT/INR",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Digoxin to match snapshot 1`] = `
Array [
  "Group and Screen",
  "ECG",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Digoxin to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Diuretics to match snapshot 1`] = `
Array [
  "Group and Screen",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Diuretics to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Lithium to match snapshot 1`] = `
Array [
  "Group and Screen",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Lithium to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of NSAIDS to match snapshot 1`] = `
Array [
  "Group and Screen",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of NSAIDS to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of systemic steroid used within 6 months to match snapshot 1`] = `
Array [
  "Group and Screen",
  "Renal Panel (Creat + Lytes)",
  "Gluc",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of systemic steroid used within 6 months to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for no inputs in PreopRecommendation.js set of preop exams for no diseases or medication to match snapshot 1`] = `
Array [
  "Group and Screen",
]
`;

exports[`Testing PatientExamsNeeded() for no inputs in PreopRecommendation.js set of preop exams for no diseases or medication to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for >= 2 risk factors to match snapshot 1`] = `
Array [
  "Group and Screen",
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for >= 2 risk factors to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for Age > 69 years old to match snapshot 1`] = `
Array [
  "Group and Screen",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for Age > 69 years old to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for diabetes (on Insulin or 2 oral agents) to match snapshot 1`] = `
Array [
  "Group and Screen",
  "CBC",
  "CXR (for surgical / anesthetic planning / new or worsened symptoms)",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for diabetes (on Insulin or 2 oral agents) to match snapshot 2`] = `
Array [
  "ECG",
  "Renal Panel (Creat + Lytes)",
  "PTT/INR",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for diabetes to match snapshot 1`] = `
Array [
  "Group and Screen",
  "ECG ",
  "Renal Panel (Creat + Lytes)",
  "Gluc",
  "HbA1C",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for hepatic disease to match snapshot 1`] = `
Array [
  "Group and Screen",
  "CBC",
  "Renal Panel (Creat + Lytes)",
  "PTT/INR",
  "LFT",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for hepatic disease to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of active bleeding to match snapshot 1`] = `
Array [
  "Group and Screen",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of active bleeding to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of adrebal disease to match snapshot 1`] = `
Array [
  "Group and Screen",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of adrebal disease to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of anemia to match snapshot 1`] = `
Array [
  "Group and Screen",
  "CBC",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of anemia to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of pituitary disease to match snapshot 1`] = `
Array [
  "Group and Screen",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of pituitary disease to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of systemic endocrine disease to match snapshot 1`] = `
Array [
  "Group and Screen",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of systemic endocrine disease to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for kidney disease (on dialysis or at risk for Acute Kidney Injury [AKI] to match snapshot 1`] = `
Array [
  "Group and Screen",
  "CBC",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for kidney disease (on dialysis or at risk for Acute Kidney Injury [AKI] to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for thyroid disease or on thyroid supplementation to match snapshot 1`] = `
Array [
  "Group and Screen",
  "TSH",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for thyroid disease or on thyroid supplementation to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for pulmonary diseases in PreopRecommendation.js set of preop exams for severe COPD, home oxygen, pulmonary HTN to match snapshot 1`] = `
Array [
  "Group and Screen",
  "ECG",
  "CBC",
  "CXR (for surgical / anesthetic planning / new or worsened symptoms)",
]
`;

exports[`Testing PatientExamsNeeded() for pulmonary diseases in PreopRecommendation.js set of preop exams for severe COPD, home oxygen, pulmonary HTN to match snapshot 2`] = `Array []`;

exports[`Testing Tag() in tag.js correct tag creation when using GetAllExams() to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing Tag() in tag.js correct tag creation when using GetAllExams() to match snapshot 2`] = `
Array [
  "CBC",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing Tag() in tag.js correct tag creation when using GetAllExams() to match snapshot 3`] = `
Array [
  "TSH",
]
`;

exports[`Testing Tag() in tag.js correct tag creation when using GetExams() to match snapshot 1`] = `
Array [
  "ECG",
]
`;
